# heaps-benchmark

./: README.md  z-heap.cabal
bench/: Main.hs
src/Z/Data/: Heap.hs  ListHeap.hs
