cabal-version: 3.6

name: Z-Heap
version: 0.1.1.0
extra-source-files:
  README.md

library
  exposed-modules:
    Z.Data.Heap
    Z.Data.ListHeap
  hs-source-dirs: src
  ghc-options:
    -Wall
    -Wno-missing-signatures
    -Wno-name-shadowing
    -Wno-unused-do-bind
    -Wno-unused-matches
    -Wno-partial-type-signatures
    -O2
  build-depends:
      base
    , Z-Data

executable bench
  main-is: Main.hs
  hs-source-dirs: bench
  ghc-options:
    -Wall
    -Wno-missing-signatures
    -Wno-name-shadowing
    -Wno-unused-do-bind
    -Wno-unused-matches
    -Wno-partial-type-signatures
    -rtsopts
    -O2
  build-depends:
      base
    , gauge
    , random
    , Z-Heap